[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clashroyale"]

[project]
name = "ClashRoyale"
version = "0.0.1"
description = "Clash Royale game engine"
readme = "README.md"
dependencies = [
  "gymnasium~=0.29.0",
  "pygame~=2.5.2"
]
authors = [
  { name = "MSU AI Club", email = "msuaiclub@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
