[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = find:

[project]
name = "clash_royale"
version = "0.0.1"
description = "Clash Royale game engine"
readme = "README.md"
dependencies = [
]
authors = [
  { name = "MSU AI Club", email = "msuaiclub@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
